New-Upload-1755854042013/objects/Profile_Page_Access__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Page__c</fullName>
        <description>Name of the Apex page</description>
        <label>Apex Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Access_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Class Access record</description>
        <label>Class Access Lookup</label>
        <referenceTo>Profile_Class_Access__c</referenceTo>
        <relationshipLabel>Page Accesses by Class Access</relationshipLabel>
        <relationshipName>PageAccessesByClass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the page access is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Page Accesses by Name</relationshipLabel>
        <relationshipName>Page_Accesses_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Page Accesses</relationshipLabel>
        <relationshipName>Page_Accesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Profile Page Access</label>
    <nameField>
        <displayFormat>PPA-{0000}</displayFormat>
        <label>Page Access Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Page Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>